service methode done for client

--- a/Server/WSShoppingSolver/nbproject/project.properties
+++ b/Server/WSShoppingSolver/nbproject/project.properties
@@ -13,7 +13,7 @@ build.test.classes.dir=${build.dir}/test/classes
 build.test.results.dir=${build.dir}/test/results
 build.web.dir=${build.dir}/web
 build.web.excludes=${build.classes.excludes}
-client.urlPart=
+client.urlPart=/ClientServlet
 compile.jsps=false
 conf.dir=${source.root}/conf
 debug.classpath=${build.classes.dir}:${javac.classpath}
@@ -29,6 +29,8 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.xpp3_min-1.1.4c.jar=lib\\xstream-1.4.8\\xstream\\xpp3_min-1.1.4c.jar
+file.reference.xstream-1.4.8.jar=lib\\xstream-1.4.8\\xstream-1.4.8.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -42,7 +44,9 @@ j2ee.platform.wsimport.classpath=${j2ee.server.home}/modules/webservices-osgi.ja
 j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.xstream-1.4.8.jar}:\
+    ${file.reference.xpp3_min-1.1.4c.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -72,7 +76,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
