--- a/Server/WSShoppingSolver/nbproject/private/private.properties
+++ b/Server/WSShoppingSolver/nbproject/private/private.properties
@@ -4,4 +4,7 @@ j2ee.server.domain=C:/Program Files/Glassfish4/glassfish/domains/domain1
 j2ee.server.home=C:/Program Files/Glassfish4/glassfish
 j2ee.server.instance=[C:\\Program Files\\Glassfish4\\glassfish;C:\\Program Files\\Glassfish4\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
 j2ee.server.middleware=C:/Program Files/Glassfish4
+javac.debug=true
+javadoc.preview=true
+selected.browser=default
 user.properties.file=C:\\Users\\Jiajing\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
