--- a/Server/WSShoppingSolver/nbproject/private/private.properties
+++ b/Server/WSShoppingSolver/nbproject/private/private.properties
@@ -6,5 +6,5 @@ j2ee.server.instance=[C:\\Program Files\\Glassfish4\\glassfish;C:\\Program Files
 j2ee.server.middleware=C:/Program Files/Glassfish4
 javac.debug=true
 javadoc.preview=true
-selected.browser=default
+selected.browser=SL[/Browsers/FirefoxBrowser
 user.properties.file=C:\\Users\\Jiajing\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
