--- a/Server/WSShoppingSolver/nbproject/project.properties
+++ b/Server/WSShoppingSolver/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.xmlpull-1.1.3.1.jar=lib\\xstream-1.4.8\\xstream\\xmlpull-1.1.3.1.jar
 file.reference.xpp3_min-1.1.4c.jar=lib\\xstream-1.4.8\\xstream\\xpp3_min-1.1.4c.jar
 file.reference.xstream-1.4.8.jar=lib\\xstream-1.4.8\\xstream-1.4.8.jar
 includes=**
@@ -46,7 +47,8 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${file.reference.xstream-1.4.8.jar}:\
-    ${file.reference.xpp3_min-1.1.4c.jar}
+    ${file.reference.xpp3_min-1.1.4c.jar}:\
+    ${file.reference.xmlpull-1.1.3.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
